# autoremix

./: .clang-format  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  AndroidManifest.xml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_LICENSES.md  QUALITY_REPORT.md  README.md  README.txt  RESEARCH_AND_ROADMAP.md  SECURITY.md  THIRD_PARTY_MODELS.md  THIRD_PARTY_NOTICES.md  build-apk.sh  build.gradle.kts  gradle.properties  release-history.json  settings.gradle.kts  version.properties
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: repository_policy.py  validate_docs.py  validate_version.py
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
audio-core/: CMakeLists.txt  CMakePresets.json
audio-core/benchmarks/: audio_core_benchmark.cpp
audio-core/include/autoremix/: audio_core.hpp  audio_core_c.h  progressive_transition.hpp
audio-core/src/: audio_core.cpp  audio_core_c.cpp  progressive_transition.cpp
audio-core/tests/: audio_core_tests.cpp  c_api_compile_test.c
docs/: index.html
docs/architecture/: CURRENT_STATE.md  IMPLEMENTATION_PLAN.md  TARGET_STATE.md
docs/architecture/decisions/: 0001-shared-cpp-audio-core.md  0002-explicit-stem-plan-and-vocal-provenance.md  0003-deterministic-tier-c-first.md  0004-quality-gates-before-ranking.md  0005-guaranteed-fallback-first.md  0006-versioned-bounded-cache.md  0007-progressive-non-repeating-transitions.md
docs/assets/: site.css  site.js
docs/assets/audio/: LICENSE.md  manifest.json
docs/assets/screenshots/: README.md
docs/benchmarks/: 2026-07-19-aab3136-docker-wsl2-x86_64.json  2026-07-19-docker-wsl2-x86_64.json  README.md
docs/debug/: AI_PATH_VERIFICATION.md  CURRENT_RUNTIME_AUDIO_FLOW.md  HARDCODED_TIMELINE_AUDIT.md  TRANSITION_FREEZE_ROOT_CAUSE.md
docs/research/: ON_DEVICE_ML.md
gradle/wrapper/: gradle-wrapper.properties
platform-android/: README.md  build.gradle.kts
platform-android/scripts/: capture-screenshots.ps1  capture-screenshots.sh
platform-android/src/main/cpp/: CMakeLists.txt  autoremix_jni.cpp
platform-ios/: README.md
platform-ios/AutoRemix.xcodeproj/: project.pbxproj
platform-ios/AutoRemix.xcodeproj/xcshareddata/xcschemes/: AutoRemix.xcscheme
platform-ios/AutoRemix/App/: AppDelegate.swift  AutoRemixApp.swift
platform-ios/AutoRemix/Audio/: AudioEngineController.swift  AutoRemix-Bridging-Header.h  NativeAudioBridge.h  NativeAudioBridge.mm
platform-ios/AutoRemix/Background/: BackgroundAnalysisScheduler.swift
platform-ios/AutoRemix/Fixtures/: PreviewFixtures.swift
platform-ios/AutoRemix/Models/: PlaybackModels.swift
platform-ios/AutoRemix/Playback/: NowPlayingController.swift  PlaybackController.swift
platform-ios/AutoRemix/Resources/: Info.plist
platform-ios/AutoRemix/UI/: ContentView.swift
platform-ios/AutoRemixTests/: PreviewFixturesTests.swift
res/drawable/: ic_launcher.xml
scripts/: generate_audio_fixtures.py  run_core_benchmark.ps1  run_core_benchmark.sh
src/com/alexey/autoremix/: AudioAnalyzer.java  AudioContinuityValidator.java  AudioTransformationEvent.java  BeatPhaseAligner.java  ContinuationReservoir.java  ContinuityDirector.java  ContinuousScenePlanner.java  ContinuousSceneTransitionPlan.java  FastFft.java  LayerPlan.java  PcmAudio.java  (+28 more)
tests/: AudioContinuityValidatorSmokeTest.java  BeatPhaseAlignerSmokeTest.java  ContinuationPlannerSmokeTest.java  ContinuityDirectorSmokeTest.java  ContinuousSceneEngineSmokeTest.java  ContinuousScenePlannerSmokeTest.java  DirectorFuzzSmokeTest.java  GoldenContinuousSceneSmokeTest.java  LayerContinuitySmokeTest.java  MasterAudioGraphSmokeTest.java  MasteringSmokeTest.java  MusicalTimelinePlannerTest.java  StemReconstructionSmokeTest.java  TransitionStateMachineSmokeTest.java  WsolaSmokeTest.java
(+14 files in other folders)
